# Parsec

./: CMakeLists.txt  README.md
OnComputer/: mylib.cuh  mylib.h
OnRaspberryPi/: CMakeLists-rasp.txt  main_rasp.cpp  mylib.cpp
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  my_project
